# dynamic-graph-agent-framework

./: CHANGELOG.md  LICENSE  MANIFEST.in  OPEN_SOURCE_GUIDE.md  PUBLISHING.md  README.md  config.yaml  install.bat  install.sh  pyproject.toml  setup.py  test_install.py
agent_graph_framework.egg-info/: PKG-INFO  SOURCES.txt
dynamic_graph_agent_framework/: __init__.py
dynamic_graph_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dynamic_graph_agent_framework/ai_tools/: __init__.py  client.py  config.py  context.py  json_call.py  messages.py  text_call.py
dynamic_graph_agent_framework/graph/: __init__.py  executor.py  graph.py  memory.py  node.py  transition.py
examples/: demo.py
tests/: test_ai_tools.py  test_graph.py  test_integration.py
